--- a/index.html
+++ b/index.html
@@ -379,24 +379,29 @@ nav a:hover::after { width: 80%;}
             <div class="blog-card">
                 <div class="blog-card-header">AI + Human Creativity: My Journey into Marketing's Future</div>
                 <div class="blog-card-content">
-                    <p><strong>Preview:</strong> Getting my AI certification wasn't just about learning new tools -- it was about preparing for a future where human creativity and artificial intelligence work together to create marketing magic...</p>
+                    <p><strong>Preview:</strong> Exploring AI isn’t just about learning new tools — it’s about reimagining what’s possible when human creativity meets machine intelligence. My journey into AI began with curiosity, and it’s leading me toward a future where marketing becomes more insightful, intuitive, and inspired...</p>
                     <details>
                         <summary style="margin:1rem 0;cursor:pointer;color:#D4AF37;font-weight:bold;">Read Full Story</summary>
                         <div>
                             <p>
-                                Everyone's talking about AI replacing marketers. I see it differently. AI isn't replacing human creativity -- it's amplifying it.
+                                Everyone’s talking about AI replacing marketers. I see it differently. AI isn’t competing with human creativity — it’s amplifying it.
                             </p>
                             <p>
-                                <strong>Why I Chose AI:</strong> After years of manual campaign monitoring and data analysis, I realized that AI could handle the repetitive tasks, freeing me to focus on what humans do best -- strategy, creativity, and connection.<br>
-                                <strong>The Learning Journey:</strong> The 'Career Essentials in Generative AI' certification wasn't just about understanding technology. It was about reimagining how marketing works.<br>
+                                <strong>Why I Chose to Explore AI:</strong> After years of manually monitoring campaigns, analyzing data, and chasing insights across time zones and channels, I saw an opportunity. AI could handle the repetitive tasks, giving me the freedom to do what humans do best — strategize, create, connect.<br>
+                                <strong>The Learning Journey:</strong> I’ve completed two foundational certifications so far:
+                                <ul>
+                                    <li>Career Essentials in Generative AI by Microsoft and LinkedIn — where I explored how generative tools can support ethical, empathetic marketing</li>
+                                    <li>Introduction to Generative AI by Google Cloud Skills Boost — which sharpened my knowledge of machine learning and generative AI principles</li>
+                                    
+Next up? I’m setting my sights on the MIT Artificial Intelligence certification, diving even deeper into the future of intelligent design and human-AI collaboration.<br>
                                 <strong>Practical Applications:</strong>
                                 <ul>
-                                    <li>AI helps me analyze consumer sentiment across multiple languages</li>
-                                    <li>It assists in creating campaign variations for different cultural contexts</li>
-                                    <li>It enables real-time campaign optimization</li>
+                                    <li>AI helps me analyze consumer sentiment across languages and markets</li>
+                                    <li>It creates campaign variations that honor cultural nuance</li>
+                                    <li>It powers real-time optimization that turns performance data into creative momentum</li>
                                 </ul>
-                                <strong>The Human Element:</strong> But here's what AI can't do -- it can't understand the feeling behind a mother's smile when she sees her child enjoy a treat. It can't capture the pride in an entrepreneur's eyes when their business grows. It can't replicate the joy of a successful campaign launch.<br>
-                                <strong>My Prediction:</strong> The future belongs to marketers who can blend AI efficiency with human empathy. We're not being replaced -- we're being enhanced.
+                                <strong>The Human Element:</strong> But here’s what AI can’t replicate: the emotional spark of a mother seeing her child delight in a campaign moment. The thrill of a startup’s first big win. The pride behind every launch you’ve fought for. That’s where human empathy shines — and where marketing finds its magic.<br>
+                                <strong>My Prediction:</strong> The marketers of the future aren’t code-chasers or data crunchers — they’re human-centric strategists empowered by technology. We’re not being replaced. We’re being reimagined.
                             </p>
                         </div>
                     </details>
@@ -405,24 +410,27 @@ nav a:hover::after { width: 80%;}
             <div class="blog-card">
                 <div class="blog-card-header">From Agency to Broadcaster to Client: The 360° Marketing Experience</div>
                 <div class="blog-card-content">
-                    <p><strong>Preview:</strong> Most marketers see the industry from one angle. I've been fortunate to experience it from three: agency creativity, broadcaster reach, and client objectives. Here's what each perspective taught me...</p>
+                    <p><strong>Preview:</strong> Most marketers view the industry through a single lens. I’ve seen it through five media: advertising, client strategy, digital marketing, and graphic design. And that’s what makes my approach different...</p>
                     <details>
                         <summary style="margin:1rem 0;cursor:pointer;color:#D4AF37;font-weight:bold;">Read Full Story</summary>
                         <div>
                             <p>
-                                My career path wasn't planned -- it was discovered. Each role taught me something different about marketing, and together, they created a perspective that's uniquely mine.
+                                My journey into marketing wasn’t linear — it was lived. Each role shaped my perspective, deepened my understanding, and helped me build campaigns that don’t just look good — they work.
                             </p>
                             <p>
-                                <strong>The Agency Perspective (Ogilvy, Starcom):</strong> Agencies taught me that great ideas are worthless without great execution. Every campaign is a story, and every story needs a beginning, middle, and end that resonates with the audience.<br>
-                                <strong>The Broadcaster Perspective (HUM Network):</strong> Working with a broadcaster showed me the power of reach. You can have the most creative campaign in the world, but if it doesn't reach the right people at the right time, it's just expensive art.<br>
-                                <strong>The Client Perspective (A1 Dynamics):</strong> Being on the client side taught me that marketing isn't just about creativity or reach -- it's about results. Every campaign decision needs to tie back to business objectives.<br>
+                                <strong>The Graphic Designing Perspective:</strong> As a freelance designer, I learned the language of visual storytelling. It’s where I discovered that brand identity is more than a logo — it’s a feeling, a voice, an experience. Designing across industries taught me to translate concepts into visuals that connect instantly.<br>
+                                <strong>The Agency Perspective:</strong> Working across Omnicom and Starcom gave me a front-row seat to the power of ideas — and the discipline behind their delivery. Advertising taught me how to shape bold concepts; media showed me how to make them land with precision. I learned that creative execution and strategic distribution go hand in hand — because a great idea is only as powerful as its ability to reach and resonate.<br>
+                                <strong>The Broadcaster Perspective:</strong> Being at a broadcaster gave me a front-row seat to storytelling at scale. I saw firsthand how reach, timing, and cultural context converge to create conversations — not just impressions. It helped me recognize the power of content that lives beyond the ad slot.<br>
+                                <strong>The Client Perspective:</strong> On the client side, every creative and media decision had to ladder up to business goals. It was about performance, not just presence. It taught me how to align marketing with KPIs, and how to ensure each campaign moved the needle — not just emotions.<br>
                                 <strong>The Integration:</strong> Now, when I develop campaigns, I think like:
                                 <ul>
-                                    <li>An agency creative (Is this compelling?)</li>
-                                    <li>A broadcaster strategist (Will this reach the right audience?)</li>
-                                    <li>A client executive (Will this drive business results?)</li>
+                                    <li>Like a designer: Is this visually authentic?</li>
+                                    <li>Like an advertiser: Is this idea powerful enough to scale?</li>
+                                    <li>Like a media planner: Will it meet the audience where they are?</li>
+                                    <li>Like a broadcaster: Does this story live beyond the screen?</li>
+                                    <li>Like a client: Will it drive tangible results?</li>
                                 </ul>
-                                <strong>The Advantage:</strong> This 360° perspective means I don't just create campaigns -- I create campaigns that work.
+                                <strong>The Advantage:</strong> That’s the 360° lens I bring to marketing. It’s not just holistic — it’s personal. Because I haven’t just studied these perspectives. I’ve lived them.
                             </p>
                         </div>
                     </details>
