--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ nav a:hover::after { width: 80%;}
                         <summary style="margin:1rem 0;cursor:pointer;color:#D4AF37;font-weight:bold;">Read Full Story</summary>
                         <div>
                             <p>
-                                <strong>Picture this:</strong> : It’s 2014, and we're gearing up to digitally launch Cadbury under the Mondelez umbrella in a market brimming with confectionery favorites. The challenge is steep, the competition fierce, and the appetite for digital innovation insatiable.
+                                <strong>Picture this:</strong> It’s 2014, and we're gearing up to digitally launch Cadbury under the Mondelez umbrella in a market brimming with confectionery favorites. The challenge is steep, the competition fierce, and the appetite for digital innovation insatiable.
                             </p>
                             <p>
                                 But here's what I learned — compelling campaigns don’t emerge from boardroom debates. They spring from understanding that every consumer has a story, and your brand must earn a place in that narrative.
@@ -388,10 +388,10 @@ nav a:hover::after { width: 80%;}
                             </p>
                             <p>
                                 <strong>Why I Chose to Explore AI:</strong> After years of manually monitoring campaigns, analyzing data, and chasing insights across time zones and channels, I saw an opportunity. AI could handle the repetitive tasks, giving me the freedom to do what humans do best — strategize, create, connect.<br>
-                                <strong>The Learning Journey:</strong> I’ve completed two foundational certifications so far:
+                                <strong>The Learning Journey:</strong> Earned two foundational certifications in Generative AI:
                                 <ul>
-                                    <li>Career Essentials in Generative AI by Microsoft and LinkedIn — where I explored how generative tools can support ethical, empathetic marketing</li>
-                                    <li>Introduction to Generative AI by Google Cloud Skills Boost — which sharpened my knowledge of machine learning and generative AI principles</li>
+                                    <li>Career Essentials in Generative AI (Microsoft & LinkedIn) — focused on ethical, empathetic marketing applications</li>
+                                    <li>Introduction to Generative AI (Google Cloud Skills Boost) — deepened my understanding of machine learning and generative AI principles</li>
                                     
 Next up? I’m setting my sights on the MIT Artificial Intelligence certification, diving even deeper into the future of intelligent design and human-AI collaboration.<br>
                                 <strong>Practical Applications:</strong>
