--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ nav a:hover::after { width: 80%;}
 
         <!-- Karachi Section Images Gallery -->
         <div class="container" style="margin-top: 3rem; text-align: center;">
-            <h3 style="color:#764ba2; margin-bottom:1.5rem;">Moments from Karachi: My Early Career</h3>
+            <h3 style="color:#764ba2; margin-bottom:1.5rem;">Moments from Pakistan: My Beginnings</h3>
             <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem;">
                 <div>
                     <img src="image1.jpeg" alt="Graduation" style="width:270px; border-radius:12px; box-shadow: 0 4px 16px rgba(44,62,80,0.10)">
