--- a/index.html
+++ b/index.html
@@ -6,75 +6,70 @@
   <title>Rozina Punjwani — Creative Director & Graphic Designer</title>
   <meta name="description" content="Graphic design portfolio of Rozina Punjwani: branding, campaigns, posters, UX/UI website work, and scalable Canva templates for franchises."/>
   <link rel="icon" href="favicon.ico" type="image/x-icon"/>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
     :root{
-      --bg1:#0f172a;
-      --bg2:#111827;
+      --bg:#111827;
       --white:#ffffff;
       --muted:#6b7280;
       --brand:#D4AF37;
-      --accent:#7c3aed;
       --card:#ffffff;
       --link:#2563eb;
     }
     *{box-sizing:border-box}
-    html,body{margin:0;padding:0}
-    body{font-family:'Inter',Arial,sans-serif; line-height:1.6; color:#1f2937; background:#f7f7fb}
+    body{margin:0;font-family:'Inter',Arial,sans-serif;line-height:1.6;background:#f7f7fb;color:#1f2937}
+    .container{max-width:1100px;margin:0 auto;padding:0 20px}
 
-    .container{max-width:1100px; margin:0 auto; padding:0 20px}
+    nav{position:fixed;top:0;left:0;right:0;z-index:10;background:#111827cc;backdrop-filter:blur(6px)}
+    nav .wrap{display:flex;justify-content:space-between;align-items:center;padding:12px 20px}
+    nav .brand{color:#fff;font-weight:700}
+    nav ul{display:flex;gap:20px;list-style:none;margin:0;padding:0}
+    nav a{color:#e5e7eb;text-decoration:none;font-weight:600;padding:8px 12px;border-radius:8px}
+    nav a:hover{background:#1f2937;color:#fff}
 
-    nav{position:fixed; top:0; left:0; right:0; z-index:10; background:#111827cc; backdrop-filter:blur(6px); border-bottom:1px solid #1f2937;}
-    nav .wrap{display:flex; align-items:center; justify-content:space-between; padding:12px 20px}
-    nav .brand{color:var(--white); font-weight:700;}
-    nav ul{display:flex; gap:20px; list-style:none; margin:0; padding:0}
-    nav a{color:#e5e7eb; text-decoration:none; font-weight:600; padding:8px 12px; border-radius:8px}
-    nav a:hover{background:#1f2937; color:#fff}
-
-    .hero{padding:140px 0 60px; background:linear-gradient(180deg,#0f172a 0%, #111827 100%); color:#e5e7eb; text-align:center}
-    .hero h1{font-size:2.4rem; margin:0 0 10px; color:#fff}
-    .hero p{color:#cbd5e1; max-width:720px; margin:0 auto}
-    .cta{margin-top:20px; display:flex; gap:12px; justify-content:center; flex-wrap:wrap}
-    .btn{background:var(--brand); color:#111827; padding:10px 16px; border-radius:10px; font-weight:700; text-decoration:none}
-    .btn.secondary{background:#1f2937; color:#fff; border:1px solid #374151}
+    .hero{padding:140px 0 60px;background:linear-gradient(180deg,#0f172a 0%, #111827 100%);color:#e5e7eb;text-align:center}
+    .hero h1{font-size:2.4rem;margin:0 0 10px;color:#fff}
+    .hero p{color:#cbd5e1;max-width:720px;margin:0 auto}
+    .cta{margin-top:20px;display:flex;gap:12px;justify-content:center;flex-wrap:wrap}
+    .btn{background:var(--brand);color:#111827;padding:10px 16px;border-radius:10px;font-weight:700;text-decoration:none}
+    .btn.secondary{background:#1f2937;color:#fff;border:1px solid #374151}
 
     section{padding:70px 0}
-    section h2{text-align:center; font-size:1.8rem; margin-bottom:24px; color:#111827}
-    .sub{color:#6b7280; text-align:center; margin-top:-12px}
+    section h2{text-align:center;font-size:1.8rem;margin-bottom:24px;color:#111827}
+    .sub{color:#6b7280;text-align:center;margin-top:-12px}
 
-    .grid{display:grid; grid-template-columns:repeat(auto-fit, minmax(280px,1fr)); gap:20px}
-    .card{background:var(--card); border:1px solid #e5e7eb; border-radius:14px; overflow:hidden; box-shadow:0 6px 20px rgba(0,0,0,.06)}
-    .card img{width:100%; height:180px; object-fit:cover}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px}
+    .card{background:var(--card);border:1px solid #e5e7eb;border-radius:14px;overflow:hidden;box-shadow:0 6px 20px rgba(0,0,0,.06)}
+    .card img{width:100%;height:180px;object-fit:cover}
     .card-body{padding:14px 16px}
-    .card-body h3{margin:0 0 10px; font-size:1.1rem; color:#111827}
-    .card-body p{margin:0; font-size:0.9rem; color:#555}
+    .card-body h3{margin:0 0 10px;font-size:1.1rem;color:#111827}
+    .card-body p{margin:0;font-size:0.9rem;color:#555}
 
-    .case{display:grid; grid-template-columns:1.2fr .8fr; gap:24px}
-    @media(max-width:860px){.case{grid-template-columns:1fr}}
+    .info-section{max-width:800px;margin:0 auto;text-align:center}
+    .info-card{background:#fff;border-radius:10px;padding:30px;box-shadow:0 4px 12px rgba(0,0,0,0.1);margin-bottom:20px}
+    .info-card p{font-size:1rem;color:#444;line-height:1.6}
+    .info-card a{color:var(--link);text-decoration:none;font-weight:bold}
+    .info-card a:hover{text-decoration:underline}
 
-    footer{background:#0f172a; color:#cbd5e1; padding:40px 0; text-align:center}
-    footer a{color:#fff; text-decoration:none; font-weight:700}
+    footer{background:#0f172a;color:#cbd5e1;padding:40px 0;text-align:center}
+    footer a{color:#fff;text-decoration:none;font-weight:700}
   </style>
 </head>
 <body>
 
-<nav aria-label="Primary">
+<nav>
   <div class="wrap container">
     <div class="brand">Rozina Punjwani</div>
     <ul>
       <li><a href="#portfolio">Portfolio</a></li>
-      <li><a href="#web">Website design</a></li>
-      <li><a href="#templates">Templates</a></li>
       <li><a href="#about">About</a></li>
-      <li><a href="#contact">Connect</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </div>
 </nav>
 
-<header class="hero" id="home">
+<header class="hero">
   <div class="container">
     <h1>Creative Director & Graphic Designer building brand-consistent, scalable systems</h1>
     <p>I design branding, campaigns, and templates that non‑design teams can adapt confidently.</p>
@@ -104,4 +99,14 @@
   </div>
 </section>
 
-<section id
+<section id="about">
+  <h2>About Me</h2>
+  <div class="info-section">
+    <div class="info-card">
+      <p>Communications strategist and designer with 8+ years across Canada, UAE, and Pakistan. I specialize in creating scalable, brand-consistent assets that empower teams and drive engagement.</p>
+      <p><a href="">Download Resume (coming soon)</a></p>
+    </div>
+  </div>
+</section>
+<section id="contact">
+  <h
