--- a/index.html
+++ b/index.html
@@ -300,15 +300,15 @@
 
       <div class="case" role="article" style="margin-top:28px">
         <div class="visual">
-          <img src="sikyuen-home.jpg" alt="Sikyuen.mu redesigned homepage screenshot"/>
+          <img src="sikyuen-home.jpg" alt="sikyuengroup.mu redesigned homepage screenshot"/>
         </div>
         <div class="copy">
           <div class="label">Case study</div>
-          <h3>Sikyuen.mu — Content-first UX</h3>
+          <h3>sikyuengroup.mu — Content-first UX</h3>
           <p>Refreshed layout and navigation with emphasis on clarity, mobile performance, and easy content updates.</p>
           <p class="meta">Role: UX/UI | Tools: CMS</p>
           <div class="actions">
-            <a class="link" href="https://sikyuen.mu" target="_blank" rel="noopener">Visit site →</a>
+            <a class="link" href="https://sikyuengroup.mu" target="_blank" rel="noopener">Visit site →</a>
           </div>
         </div>
       </div>
